--- a/AdManageKit/src/main/res/layout/layout_native_template_preview.xml
+++ b/AdManageKit/src/main/res/layout/layout_native_template_preview.xml
@@ -4,14 +4,14 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <!-- Ad placeholder - will contain the actual native ad view -->
         <FrameLayout
             android:id="@+id/fl_ad_placeholder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:visibility="gone" />
 
@@ -19,7 +19,7 @@
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmer_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:shimmer_auto_start="true"
             app:shimmer_base_color="#E0E0E0"
             app:shimmer_highlight_color="#F5F5F5">
@@ -28,7 +28,7 @@
             <FrameLayout
                 android:id="@+id/shimmer_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
 
         </com.facebook.shimmer.ShimmerFrameLayout>
 
