--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,71 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/sampleNativeBannerSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="Native Banner Small Ad">
-
-    </TextView>
-
-
-    <com.i2hammad.admanagekit.admob.NativeBannerSmall
-        android:id="@+id/nativeBannerSmall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sampleNativeBannerSmall">
-
-    </com.i2hammad.admanagekit.admob.NativeBannerSmall>
-
-
-    <TextView
-        android:id="@+id/sampleNativeBannerMedium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nativeBannerSmall"
-        android:padding="16dp"
-        android:text="Native Banner Medium Ad">
-
-    </TextView>
-
-
-    <com.i2hammad.admanagekit.admob.NativeBannerMedium
-        android:id="@+id/nativeBannerMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sampleNativeBannerMedium">
-
-    </com.i2hammad.admanagekit.admob.NativeBannerMedium>
-
-    <TextView
-        android:id="@+id/sampleNativeBannerLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nativeBannerMedium"
-        android:padding="16dp"
-        android:text="Native Large Ad">
-
-    </TextView>
-
-
-    <com.i2hammad.admanagekit.admob.NativeLarge
-        android:id="@+id/nativeLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sampleNativeBannerLarge">
-
-    </com.i2hammad.admanagekit.admob.NativeLarge>
-
-
-
-
     <LinearLayout
+        android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nativeLarge"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -114,5 +53,89 @@
             android:textAllCaps="false"
             style="@style/Widget.Material3.Button.ElevatedButton" />
 
+        <Button
+            android:id="@+id/btnOpenWaterfallTest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Test Waterfall Ads"
+            android:textSize="14sp"
+            android:textAllCaps="false"
+            style="@style/Widget.Material3.Button.ElevatedButton" />
+
     </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_below="@+id/buttons"
+
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/sampleNativeBannerSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="Native Banner Small Ad">
+
+            </TextView>
+
+
+            <com.i2hammad.admanagekit.admob.NativeBannerSmall
+                android:id="@+id/nativeBannerSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sampleNativeBannerSmall">
+
+            </com.i2hammad.admanagekit.admob.NativeBannerSmall>
+
+
+            <TextView
+                android:id="@+id/sampleNativeBannerMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/nativeBannerSmall"
+                android:padding="16dp"
+                android:text="Native Banner Medium Ad">
+
+            </TextView>
+
+
+            <com.i2hammad.admanagekit.admob.NativeBannerMedium
+                android:id="@+id/nativeBannerMedium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sampleNativeBannerMedium">
+
+            </com.i2hammad.admanagekit.admob.NativeBannerMedium>
+
+            <TextView
+                android:id="@+id/sampleNativeBannerLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/nativeBannerMedium"
+                android:padding="16dp"
+                android:text="Native Large Ad">
+
+            </TextView>
+
+
+            <com.i2hammad.admanagekit.admob.NativeLarge
+                android:id="@+id/nativeLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sampleNativeBannerLarge">
+
+            </com.i2hammad.admanagekit.admob.NativeLarge>
+
+
+        </LinearLayout>
+    </ScrollView>
+
+
+
+
 </RelativeLayout>
