--- a/AdManageKit/src/main/res/layout-sw600dp/layout_native_large.xml
+++ b/AdManageKit/src/main/res/layout-sw600dp/layout_native_large.xml
@@ -2,7 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/ad_unit"
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -292,5 +292,5 @@
                     android:layout_alignParentTop="true" />
             </RelativeLayout>
         </com.facebook.shimmer.ShimmerFrameLayout>
-    </LinearLayout>
+    </FrameLayout>
 </merge>
